Fix Multi-file input, fix nested types in generics, fix inheritance on types with same names as their non-generic superclasses,  added more reserved words, fixed empty types, fixed enum conversion and values, fix interfaces inheritance ordering,

--- a/csharp/PythonNetStubTool/Properties/launchSettings.json
+++ b/csharp/PythonNetStubTool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PythonNetStubTool": {
       "commandName": "Project",
-      "commandLineArgs": "--dest-path=C:\\Repos\\Animo\\AnimoTrainer\\typings --search-paths=\"%userprofile%\\.nuget\\packages\" --target-dlls=\"C:\\Repos\\Animo\\AnimoTrainer\\lib\\AnimoSimulation.dll\""
+      "commandLineArgs": "--dest-path=C:\\Repos\\Animo\\AnimoTrainer\\typings --search-paths=\"%userprofile%\\.nuget\\packages\" --target-dlls=\"C:\\Repos\\Animo\\AnimoUnity\\Assets\\DLLs\\AnimoSimulation.dll\",\"C:\\Repos\\Animo\\AnimoUnity\\Assets\\DLLs\\AnimoDatabase.dll\""
     }
   }
 }
